# Chat-with-multiple-pdfs

./: README.md  app.py  pyproject.toml
faiss_index/: index.faiss  index.pkl
